CB-27973 tell explicitly by instanceId what are the unhealthy gateway nodes for the cluster when repair validation fails.